Utworzono strukturę strony. Dodano zdjęcia oraz content

--- a/index.html
+++ b/index.html
@@ -1,19 +1,143 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WebStudio</title>
 </head>
-    <nav>
-        
-    </nav>
-
-
 <body>
 
-</body>
+<!--header-->
+    <header>
+        <nav>
+            <h2>
+                <a href="#">WebStudio</a>
+            </h2>
+                <ul>
+                    <li><a href="#">Agencja</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">Kontakt<a></li>
+                </ul>
+        </nav>
+    <a href="info@devstudio.com">info@devstudio.com</a>
+    <a href="tel:+48111111111">+48 111 111 111</a>
+        
+   </header>
+<!--end header-->
 
+<!--main-->
+   <main>
+        <section>
+            <div>
+                <p>
+                    <h1>EFEKTYWNE ROZWIĄZANIA<br>DLA WASZEGO BIZNESU</h1>
+                </p>
+            </div>
+            <div>
+                <button style="button">Zamów usługę</button>
+            </div>
+        </section>
+        <section>
+          <ul>
+              <li>LOREM IPSUM</li>
+              <li>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                  Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada
+              </li>
+            </ul>      
+            <ul>
+                <li>LOREM IPSUM</li>
+                <li>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                    Nam vel arcu sem. Sed non sodales dui. Interdum et
+                    malesuada
+                </li>
+            </ul>
+            <ul>
+                <li>LOREM IPSUM</li>
+                <li>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                    Nam vel arcu sem. Sed non sodales dui. Interdum et
+                    malesuada
+                </li>
+            </ul>
+            <ul>
+                <li>LOREM IPSUM</li>
+                <li>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Nam vel arcu sem. Sed non sodales dui. Interdum et
+                    malesuada
+                </li>
+            </ul>
+        </section>
+<!--what we do-->
+        <section>
+            <div>
+                <h2>Czym się zajmujemy</h2>
+                    <div><img src="images/img 1.jpg" alt="Pracownik programuje" width="370px" height="294px"></div>
+                    <div><img src="images/img 2.jpg" alt="Pracownik sprawdza layout strony na telefonie" width="370px" height="294px"></div>
+                    <div><img src="images/img 3.jpg" alt="Designer wybiera kolory do strony www i aplikacji mobilnej" width="370px" height="294px"></div>
+            </div>
+        </section>
+        <section>
+            <h2>Nasz zespół</h2>
+            <div>
+                <ul>
+                    <li>
+                        <img src="images/img Product D.jpg" alt="Product Designer" width="270px" height="260px">
+                    </li>   
+                        <p>John Doe</p>
+                        <p>Product Designer</p>
+                </ul>
+            </div>
+            <div>
+                <ul>
+                    <li>
+                        <img src="images/img Front D.jpg" width="270px" height="260px">
+                    </li>
+                        <p>John Doe</p>
+                        <p>Frontend Developer</p>
+                </ul>
+            </div>
+            <div>
+                <ul>
+                    <li>
+                        <img src="images/img Marketing.jpg" width="270px" height="260px">
+                    </li>
+                        <p>John Doe</p>
+                        <p>Marketing</p>
+                </ul>
+            </div>
+            <div>
+                <ul>
+                    <li>
+                        <img src="images/img UI D.jpg" width="270px" height="260px">
+                    </li>
+                    <p>John Doe</p>
+                    <p>UI Designer</p>
+                </ul>
+            </div>
+        </section>
+
+   </main>
+<!--end main-->
+    <footer>
+        <section>
+             <a href="#">WebStudio</a> 
+                <adress>
+                    <p>Warszawa, Aleje Jerozolimskie 21</p>   
+                        <ul>
+                            <li>
+                               <a href="mailto:info@example.com">info@example.com</a> 
+                            </li>
+                            <li>
+                               <a href="tel:+48111111111">+48 111 111 111</a>  
+                            </li>
+                        </ul>  
+                </adress>   
+        </section>
+    </footer>
+</body>
 </html>
