--- a/index.html
+++ b/index.html
@@ -16,9 +16,15 @@
                 <a href="#">WebStudio</a>
             </h2>
                 <ul>
-                    <li><a href="#">Agencja</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Kontakt<a></li>
+                    <li>
+                        <a href="#">Agencja</a>
+                    </li>
+                    <li>
+                        <a href="#">Portfolio</a>
+                    </li>
+                    <li>
+                        <a href="#">Kontakt</a>
+                    </li>
                 </ul>
         </nav>
     <a href="info@devstudio.com">info@devstudio.com</a>
@@ -36,7 +42,7 @@
                 </p>
             </div>
             <div>
-                <button style="button">Zamów usługę</button>
+                <button name="button">Zamów usługę</button>
             </div>
         </section>
         <section>
@@ -76,9 +82,9 @@
         <section>
             <div>
                 <h2>Czym się zajmujemy</h2>
-                    <div><img src="images/img 1.jpg" alt="Pracownik programuje" width="370px" height="294px"></div>
-                    <div><img src="images/img 2.jpg" alt="Pracownik sprawdza layout strony na telefonie" width="370px" height="294px"></div>
-                    <div><img src="images/img 3.jpg" alt="Designer wybiera kolory do strony www i aplikacji mobilnej" width="370px" height="294px"></div>
+                    <div><img src="/images/imgfirst.jpg" alt="Pracownik programuje" width="370" height="294"></div>
+                    <div><img src="/images/imgsecond.jpg" alt="Pracownik sprawdza layout strony na telefonie" width="370" height="294"></div>
+                    <div><img src="/images/imgthird.jpg" alt="Designer wybiera kolory do strony www i aplikacji mobilnej" width="370" height="294"></div>
             </div>
         </section>
         <section>
@@ -86,7 +92,7 @@
             <div>
                 <ul>
                     <li>
-                        <img src="images/img Product D.jpg" alt="Product Designer" width="270px" height="260px">
+                        <img src="images/imgproductd.jpg" alt="Product Designer" width="270" height="260">
                     </li>   
                         <p>John Doe</p>
                         <p>Product Designer</p>
@@ -95,7 +101,7 @@
             <div>
                 <ul>
                     <li>
-                        <img src="images/img Front D.jpg" width="270px" height="260px">
+                        <img src="images/imgfrontd.jpg" alt="Front End Developer" width="270" height="260">
                     </li>
                         <p>John Doe</p>
                         <p>Frontend Developer</p>
@@ -104,7 +110,7 @@
             <div>
                 <ul>
                     <li>
-                        <img src="images/img Marketing.jpg" width="270px" height="260px">
+                        <img src="images/imgmarketing.jpg" alt="Marketing" width="270" height="260">
                     </li>
                         <p>John Doe</p>
                         <p>Marketing</p>
@@ -113,7 +119,7 @@
             <div>
                 <ul>
                     <li>
-                        <img src="images/img UI D.jpg" width="270px" height="260px">
+                        <img src="images/imguid.jpg" alt="UI Designer" width="270" height="260">
                     </li>
                     <p>John Doe</p>
                     <p>UI Designer</p>
