--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
    <main>
         <section>
             <div>
-                <p>
-                    <h1>EFEKTYWNE ROZWIĄZANIA<br>DLA WASZEGO BIZNESU</h1>
-                </p>
+                <h1>EFEKTYWNE ROZWIĄZANIA<br>DLA WASZEGO BIZNESU</h1>
             </div>
             <div>
                 <button name="button">Zamów usługę</button>
@@ -47,14 +45,14 @@
         </section>
         <section>
           <ul>
-              <li>LOREM IPSUM</li>
+              <li><h3>LOREM IPSUM</h3></li>
               <li>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                   Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada
               </li>
             </ul>      
             <ul>
-                <li>LOREM IPSUM</li>
+                <li><h3>LOREM IPSUM</h3></li>
                 <li>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                     Nam vel arcu sem. Sed non sodales dui. Interdum et
@@ -62,7 +60,7 @@
                 </li>
             </ul>
             <ul>
-                <li>LOREM IPSUM</li>
+                <li><h3>LOREM IPSUM</h3></li>
                 <li>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                     Nam vel arcu sem. Sed non sodales dui. Interdum et
@@ -70,7 +68,7 @@
                 </li>
             </ul>
             <ul>
-                <li>LOREM IPSUM</li>
+                <li><h3>LOREM IPSUM</h3></li>
                 <li>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Nam vel arcu sem. Sed non sodales dui. Interdum et
@@ -82,39 +80,27 @@
         <section>
             <div>
                 <h2>Czym się zajmujemy</h2>
-                    <div><img src="/images/imgfirst.jpg" alt="Pracownik programuje" width="370" height="294"></div>
-                    <div><img src="/images/imgsecond.jpg" alt="Pracownik sprawdza layout strony na telefonie" width="370" height="294"></div>
-                    <div><img src="/images/imgthird.jpg" alt="Designer wybiera kolory do strony www i aplikacji mobilnej" width="370" height="294"></div>
+                    <div><img src="images/imgfirst.jpg" alt="Pracownik programuje" width="370" height="294"></div>
+                    <div><img src="images/imgsecond.jpg" alt="Pracownik sprawdza layout strony na telefonie" width="370" height="294"></div>
+                    <div><img src="images/imgthird.jpg" alt="Designer wybiera kolory do strony www i aplikacji mobilnej" width="370" height="294"></div>
             </div>
         </section>
         <section>
             <h2>Nasz zespół</h2>
             <div>
-                <ul>
-                    <li>
-                        <img src="images/imgproductd.jpg" alt="Product Designer" width="270" height="260">
-                    </li>   
-                        <p>John Doe</p>
-                        <p>Product Designer</p>
-                </ul>
+                <img src="images/imgproductd.jpg" alt="Product Designer" width="270" height="260">
+                <p>John Doe</p>
+                <p>Product Designer</p>
             </div>
             <div>
-                <ul>
-                    <li>
-                        <img src="images/imgfrontd.jpg" alt="Front End Developer" width="270" height="260">
-                    </li>
-                        <p>John Doe</p>
-                        <p>Frontend Developer</p>
-                </ul>
+                <img src="images/imgfrontd.jpg" alt="Front End Developer" width="270" height="260">
+                <p>John Doe</p>
+                <p>Frontend Developer</p>
             </div>
             <div>
-                <ul>
-                    <li>
-                        <img src="images/imgmarketing.jpg" alt="Marketing" width="270" height="260">
-                    </li>
-                        <p>John Doe</p>
-                        <p>Marketing</p>
-                </ul>
+                <img src="images/imgmarketing.jpg" alt="Marketing" width="270" height="260">
+                <p>John Doe</p>
+                <p>Marketing</p>
             </div>
             <div>
                 <ul>
@@ -131,7 +117,7 @@
 <!--end main-->
     <footer>
         <section>
-             <a href="#">WebStudio</a> 
+             <h3><a href="#">WebStudio</a></h3> 
                 <adress>
                     <p>Warszawa, Aleje Jerozolimskie 21</p>   
                         <ul>
