--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <p>Marketing</p>
             </div>
             <div>
-                    <img src="images/imguid.jpg" alt="UI Designer" width="270" height="260">
+                    <img src="images/imgmarketing.jpg" alt="UI Designer" width="270" height="260">
                     <p>John Doe</p>
                     <p>UI Designer</p>
             </div>
