--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <footer>
         <section>
              <h3><a href="#">WebStudio</a></h3> 
-                <adress>
+                <address>
                     <p>Warszawa, Aleje Jerozolimskie 21</p>   
                         <ul>
                             <li>
@@ -124,7 +124,7 @@
                                <a href="tel:+48111111111">+48 111 111 111</a>  
                             </li>
                         </ul>  
-                </adress>   
+                </address>   
         </section>
     </footer>
 </body>
