--- a/index.html
+++ b/index.html
@@ -45,34 +45,42 @@
         </section>
         <section>
           <ul>
-              <li><h3>LOREM IPSUM</h3></li>
               <li>
+                  <h3>LOREM IPSUM</h3> 
+                <div>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                   Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada
+                </div>
               </li>
             </ul>      
             <ul>
-                <li><h3>LOREM IPSUM</h3></li>
                 <li>
+                    <h3>LOREM IPSUM</h3> 
+                <div>  
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                     Nam vel arcu sem. Sed non sodales dui. Interdum et
                     malesuada
+                </div>
                 </li>
             </ul>
             <ul>
-                <li><h3>LOREM IPSUM</h3></li>
                 <li>
+                    <h3>LOREM IPSUM</h3> 
+                <div>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                     Nam vel arcu sem. Sed non sodales dui. Interdum et
                     malesuada
+                </div>
                 </li>
             </ul>
             <ul>
-                <li><h3>LOREM IPSUM</h3></li>
                 <li>
+                    <h3>LOREM IPSUM</h3> 
+                <div>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Nam vel arcu sem. Sed non sodales dui. Interdum et
                     malesuada
+                </div>
                 </li>
             </ul>
         </section>
@@ -87,26 +95,28 @@
         </section>
         <section>
             <h2>Nasz zespół</h2>
-            <div>
-                    <img src="images/imgproductd.jpg" alt="Product Designer" width="270" height="260">
-                    <p>John Doe</p>
-                    <p>Product Designer</p>
-            </div>
-            <div>
-                    <img src="images/imgfrontd.jpg" alt="Front End Developer" width="270" height="260">
-                    <p>John Doe</p>
-                    <p>Frontend Developer</p>
-            </div>
-            <div>
-                    <img src="images/imgmarketing.jpg" alt="Marketing" width="270" height="260">
-                    <p>John Doe</p>
-                    <p>Marketing</p>
-            </div>
-            <div>
-                    <img src="images/imgfour.jpg" alt="UI Designer" width="270" height="260">
-                    <p>John Doe</p>
-                    <p>UI Designer</p>
-            </div>
+                <ul>
+                    <li>
+                            <img src="images/imgproductd.jpg" alt="Product Designer" width="270" height="260">
+                            <p>John Doe</p>
+                            <p>Product Designer</p>
+                    </li>
+                    <li>
+                            <img src="images/imgfrontd.jpg" alt="Front End Developer" width="270" height="260">
+                            <p>John Doe</p>
+                            <p>Frontend Developer</p>
+                    </li>
+                    <li>
+                            <img src="images/imgmarketing.jpg" alt="Marketing" width="270" height="260">
+                            <p>John Doe</p>
+                            <p>Marketing</p>
+                    </li>
+                    <li>
+                            <img src="images/imgfour.jpg" alt="UI Designer" width="270" height="260">
+                            <p>John Doe</p>
+                            <p>UI Designer</p>
+                    </li>
+                </ul>    
         </section>
 
    </main>
