--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
         </section>
 <!--what we do-->
         <section>
-            <div>
-                <h2>Czym się zajmujemy</h2>
-                    <div><img src="images/imgfirst.jpg" alt="Pracownik programuje" width="370" height="294"></div>
-                    <div><img src="images/imgsecond.jpg" alt="Pracownik sprawdza layout strony na telefonie" width="370" height="294"></div>
-                    <div><img src="images/imgthird.jpg" alt="Designer wybiera kolory do strony www i aplikacji mobilnej" width="370" height="294"></div>
-            </div>
+              <h2>Czym się zajmujemy</h2>
+                    <ul> 
+                        <li><img src="images/imgfirst.jpg" alt="Pracownik programuje" width="370" height="294"></li>
+                        <li><img src="images/imgsecond.jpg" alt="Pracownik sprawdza layout strony na telefonie" width="370" height="294"></li>
+                        <li><img src="images/imgthird.jpg" alt="Designer wybiera kolory do strony www i aplikacji mobilnej" width="370" height="294"></li>
+                    </ul>        
         </section>
         <section>
             <h2>Nasz zespół</h2>
